# Cargo manifest for app-rate-limiter — Phase 48 static-crate shape.
#
# Dual-mode during the dylib → static migration window. yeti-compiler
# reads only [dependencies] when building the dylib (retiring in
# Phase 48 slice 5); cargo uses the full file when building the static
# library this crate compiles to.

[package]
name = "app-rate-limiter"
version = "0.1.0"
edition = "2024"
description = "Sliding window rate limiting with real-time piracy and abuse detection"

[lib]
name = "app_rate_limiter"
path = "src/lib.rs"

[workspace]

[dependencies]
yeti-sdk = { path = "../../../Developer/yeti/crates/yeti-sdk", features = ["workspace"] }
serde_json = "1"
